@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - No longer install script/ by default
 
 0.019     2025-04-09 23:20:58+02:00 Europe/Brussels
           - Adapt to load_extension
